--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.002 20-01-2013
+
+	[Bugs]
+		no warnings::anywhere and no goddamn::warnings::anywhere
+		weren't working if you hadn't imported warnings::everywhere
+		first.
+
 0.001 20-01-2013
 
 	Initial release
