Import of SKINGTON/warnings-everywhere-0.004 from CPAN.
gitpan-cpan-distribution: warnings-everywhere
gitpan-cpan-version:      0.004
gitpan-cpan-path:         SKINGTON/warnings-everywhere-0.004.tar.gz
gitpan-cpan-author:       SKINGTON
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.004 20-01-2013
+
+	[Documentation]
+		Document problems with Dancer, and anything that messes with $^W
+
 0.003 20-01-2013
 
 	[Documentation]
