--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+0.006 20-02-2013
+
+	[Test bugs]
+		Fixed test failures with Pod::Coverage <= 0.21.
+
+		Beefed up the warnings and categories tests, often by removing
+		some category tests that were in practice difficult to carry out
+		reliably across all versions and platforms.
+
 0.005 20-01-2013
 
 	[Meta]
@@ -6,7 +15,7 @@
 0.004 20-01-2013
 
 	[Documentation]
-		Document problems with Dancer, and anything that messes with $^W
+		Document problems with Dancer, and anything that messes with $^W.
 
 0.003 20-01-2013
 
@@ -22,4 +31,4 @@
 
 0.001 20-01-2013
 
-	Initial release
+	Initial release.
