--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,15 @@
+0.007 30-05-2014
+
+    [Test bugs]
+        Removed an unnecessary test as it was more trouble than it was
+        worth.
+
+    [Documentation]
+		Added a note about not being able to disable compile-time
+		warnings like experimental::smartmatch.
+		
+        Very minor typo fix.
+
 0.006 20-02-2013
 
 	[Test bugs]
