Import of SKINGTON/warnings-everywhere-0.010.tar.gz from CPAN.
gitpan-cpan-distribution: warnings-everywhere
gitpan-cpan-version:      0.010
gitpan-cpan-path:         SKINGTON/warnings-everywhere-0.010.tar.gz
gitpan-cpan-author:       SKINGTON
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.010 26-12-2014
+
+	[Test bugs]
+		Perl 5.8.8 triggered a warning for the previous test code
+		at compile time. Switched to a more necessarily run-time
+		warning.
+
 0.009 22-12-2014
 
     [Test bugs]
